--- a/_config.yml
+++ b/_config.yml
@@ -10,17 +10,17 @@ baseurl: ''
 # Navigation links
 nav:
   home: '/'
-  tags: '/tags.html'
+  About US: 'Introduction.md'
 
-# Footer
-footer:
-  since: 2017
+# # Footer
+# footer:
+#   since: 2017
 
-# Author 配置博主信息
-author: '廖柯宇'
-nickname: '悟空'
-bio: '前端开发者，热爱技术&设计，简单乐观爱创造'
-avatar: '/assets/img/profile.png'
+#  Author 配置博主信息
+ author: GRP2018-08
+# nickname: '悟空'
+  bio: 'Group or team???'
+# avatar: '/assets/img/profile.png'
 
 # Search
 search: true
@@ -29,16 +29,16 @@ search: true
 nightMode: true
 
 # Comments 评论功能
-comments:
-  disqus: false
-  disqus_url: 'https://liaokeyu.disqus.com/embed.js'
+# comments:
+#   disqus: false
+#   disqus_url: 'https://liaokeyu.disqus.com/embed.js'
 
 # MathJax 公式支持 by Ray-Eldath
 mathjax: true
 
-# Share
-social-share: true
-social-share-items: ['wechat', 'weibo', 'douban', 'twitter']
+# # Share
+# social-share: true
+# social-share-items: ['wechat', 'weibo', 'douban', 'twitter']
 
 # theme color 主题皮肤
 theme-color: 'default'  # pink or default
@@ -48,11 +48,11 @@ postPatterns: 'circuitBoard'
 
 # SNS settings 配置社交网站
 # url: email, weibo, zhihu, twitter, instagram, juejin, github, douban, facebook, dribble, uicn, jianshu, medium, linkedin
-sns:
-  weibo: '//weibo.com/lovecolcol'
-  juejin: '//juejin.im/user/57a6f434165abd006159b4cc'
-  instagram: '//www.instagram.com/steveliaocn'
-  github: '//github.com/kaeyleo'
+# sns:
+#   weibo: '//weibo.com/lovecolcol'
+#   juejin: '//juejin.im/user/57a6f434165abd006159b4cc'
+#   instagram: '//www.instagram.com/steveliaocn'
+#   github: '//github.com/kaeyleo'
 
 # Tags 设置标签
 recommend-tags: true # whether or not display recommend-tags on the sidebar
