--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # Site settings 配置站点
-title: '廖柯宇的独立博客'
-description: '昵称悟空，千禧一代，前端开发者/伪极客/灵魂摄影师，热爱技术&设计。很高兴能在这里与你分享我对技术和生活的思考。'
-keyword: '廖柯宇, 廖柯宇的独立博客, 廖柯宇的博客, 前端, 前端开发, 前端博客, javascript, vuejs, nodejs, 设计'
+title: 'GRP2018-08'
+description: 'Immersive heritage app'
+keyword: 'immersive heritage app'
 url: 'http://ShaddeHarod.github.io' # your host
 
 # if you don't need baseurl, you should leave this value blank.
-baseurl: ''
+baseurl: 'http://ShaddeHarod.github.io'
 
 # Navigation links
 nav:
-  home: '/'
-  About US: 'Introduction.md'
+  Home: '/'
+  About US: '/Introduction.md'
 
 # # Footer
-# footer:
-#   since: 2017
+ footer:
+   since: 2018
 
 #  Author 配置博主信息
  author: GRP2018-08
@@ -61,7 +61,7 @@ recommend-condition-size: 12 # a tag will be recommended if the size of it is mo
 # Build settings
 paginate: 6
 paginate_path: 'page:num'
-exclude: ['node_modules', 'dev', 'package.json', 'gulpfile.js', '.gitignore', 'README.md']
+exclude: ['node_modules', 'dev', 'package.json', 'gulpfile.js', '.gitignore', 'README.md','Introduction.md']
 
 # Markdown
 markdown: kramdown
